@@ -23,6 +23,12 @@
 	<?php echo Ajax::button('?action=basket&type=album&id=' . $album->id,'add',_('Add'),'add_album_' . $album->id); ?>
 	<?php echo Ajax::button('?action=basket&type=album_random&id=' . $album->id,'random',_('Random'),'random_album_' . $album->id); ?>
 </td>
+<?php if (Browse::get_filter('show_art')) { ?>
+<td height="87">
+        <a href="<?php echo Config::get('web_path'); ?>/albums.php?action=show&amp;album=<?php echo $album->id; ?>">
+                <img height="75" width="75" border="0" src="<?php echo Config::get('web_path'); ?>/image.php?id=<?php echo $album->id; ?>&amp;thumb=1&amp;sid=<?php echo session_id(); ?>"
+        </a>
+<?php } ?>
 <td><?php echo $album->f_name_link; ?></td>
 <td><?php echo $album->f_artist; ?></td>
 <td><?php echo $album->song_count; ?></td>
