@@ -19,15 +19,17 @@
     <div class="sb3">
       <?php show_alphabet_list($_REQUEST['alpha_match'],$_REQUEST['action']); ?>
   <!--
-  <input type="checkbox" onclick="ajaxPut('<?php echo $ajax_info; ?>?action=browse&amp;key=show_art&amp;value=1');return true;" value="1" />
-  	<?php echo _('Show Art'); ?><br />
   <input type="checkbox" onclick="ajaxPut('<?php echo $ajax_info; ?>?action=browse&amp;key=min_count&amp;value=1');return true;" value="1" />
   	<?php echo _('Minimum Count'); ?><br />
   <input type="checkbox" onclick="ajaxPut('<?php echo $ajax_info; ?>?action=browse&amp;key=rated&amp;value=1');return true;" value="1" />
   	<?php echo _('Rated'); ?><br />
   -->
-      <input id="unplayedCB" type="checkbox" onclick="ajaxPut('<?php echo $ajax_info; ?>?action=browse&amp;key=unplayed&amp;value=1');return true;" value="1" />
+      <input id="unplayedCB" type="checkbox" <? echo $string = Browse::get_filter('unplayed') ? 'checked="checked"' : ''; ?>/>
   	  <label id="unplayedLabel" for="unplayedCB"><?php echo _('Unplayed'); ?></label><br />
+	 <?php echo Ajax::observe('unplayedCB','click',Ajax::action('?page=browse&action=browse&key=unplayed&value=1','')); ?>
+      <input id="show_artCB" type="checkbox" <? echo $string = Browse::get_filter('show_art') ? 'checked="checked"' : ''; ?>/>
+      	  <label id="show_artLabel" for="show_artCB"><?php echo _('Show Art'); ?></label><br />
+	<?php echo Ajax::observe('show_artCB','click',Ajax::action('?page=browse&action=browse&key=show_art&value=1','')); ?>
     </div>
   </li>
 </ul>
