@@ -4,6 +4,7 @@
 
 --------------------------------------------------------------------------
   v.3.4-Alpha2 
+  	- Added ability to show Album art on Browse -> Albums
   	- Added Similar Artists Link, requires MyStrands
   	- Fixed hovering on the static Ratings displays
   	- Added MyStrands Plugin, must be enabled under Plugins
